fixed pagenotfound and styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -31,23 +31,22 @@ a {
     padding-bottom: 4px;
 }
 
-@keyframes outlineColor {
+@keyframes colorCycle {
     0% {
-        -webkit-text-stroke: 2px darkblue;
+        color: darkblue;
     }
 
     50% {
-        -webkit-text-stroke: 2px rgb(0, 208, 255);
+        color: rgb(1, 1, 1, 0.9);
     }
 
     100% {
-        -webkit-text-stroke: 2px blue;
+        color: darkblue;
     }
 }
 
 h1 {
-    -webkit-text-fill-color: rgb(1, 1, 1, 0.7);
-    animation: outlineColor 5s infinite alternate;
+    animation: colorCycle 4s infinite alternate;
     font-size: 4.8rem;
     font-weight: 500;
 
@@ -124,8 +123,8 @@ nav {
     border: 2px solid rgba(0, 0, 0, 0.2);
     margin: 8px 30px;
     overflow: hidden;
-    padding: 8px 4px;
-    width: 135px;
+    padding: 8px 6px;
+    width: 130px;
 }
 
 #navbar-links-div {
@@ -148,6 +147,12 @@ nav {
         max-height: 300px;
         padding-bottom: 12px;
     }
+
+    @media (max-width: 410px) {
+        margin-top: 55px;
+        max-height: 300px;
+        padding-bottom: 12px;
+    }
 }
 
 .page-container {
@@ -156,10 +161,35 @@ nav {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto 70px auto;
+    padding-bottom: 100px;
     width: 85%;
 
     @media (max-width: 725px) {
         width: 90%;
+    }
+}
+
+#page-not-found {
+    & div {
+        font-size: 3rem;
+        margin-top: 200px;
+    }
+
+    & span {
+        font-size: 1.7rem;
+        margin-top: 50px;
+    }
+
+    @media (max-width: 625px) {
+        & div {
+            font-size: 2.5rem;
+            margin-top: 200px;
+        }
+
+        & span {
+            font-size: 1.5rem;
+            margin-top: 45px;
+        }
     }
 }
 
@@ -176,7 +206,7 @@ nav {
     position: fixed;
     right: 0;
     top: 0;
-    transform: translateY(15px);
+    transform: translateY(16px);
 
     & #hamburger {
         display: flex;
